<resources>
    <string name="app_name">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="button_library">Медиатека</string>
    <string name="button_search">Поиск</string>
    <string name="button_share">Поделиться приложением</string>
    <string name="button_support">Написать в поддержку</string>
    <string name="button_user_agreement">Пользовательское соглашение</string>
    <string name="button_theme">Темная тема</string>
    <string name="settings_message">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="settings_title">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="settings_email">"WorkshopOfRenen@gmail.com"</string>
    <string name="settings_link_share">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="settings_link">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью</string>
    <string name="please_check">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>