<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/arrowBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="28dp"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingTop="14dp"
        android:text="@string/settings"
        android:textColor="@color/main_text"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/arrow_back_icon" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"/>

    <Switch
        android:paddingStart="@dimen/settings_padding_start"
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/white"
        android:paddingEnd="18dp"
        android:textAllCaps="false"
        android:textSize="@dimen/settings_text_size"
        tools:ignore="TouchTargetSizeCheck"
        android:text="@string/button_theme"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:layout_gravity="center_vertical"
        android:text="@string/button_share"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="@dimen/settings_padding_end"
        android:gravity="left|center"
        android:drawableRight="@drawable/share_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:gravity="left|center"
        android:layout_gravity="center_vertical"
        android:text="@string/button_support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="30dp"
        android:drawableRight="@drawable/support_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:gravity="left|center"
        android:layout_gravity="center_vertical"
        android:text="@string/button_user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="@dimen/settings_padding_end"
        android:drawableRight="@drawable/arrow_forward_icon"/>

</LinearLayout>