<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background"
    tools:context=".ui.settings.SettingsActivityView">


    <TextView
        android:id="@+id/searchArrowBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="28dp"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingTop="14dp"
        android:text="@string/button_search"
        android:textColor="@color/settings_text"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/arrow_back_icon"
        android:fontFamily="@font/ys_display_medium"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:id="@+id/search_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_background"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_search_magnifier_with_padding"
                android:drawablePadding="15dp"
                android:hint="@string/button_search"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/search_hint"
                android:textColor="@color/search_input_text"
                android:imeOptions="actionSearch"/>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/close_icon"
                android:padding="10dp"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_bar_layout">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="176dp"
            android:indeterminate="false"
            android:progress="45"
            android:indeterminateTint="@color/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/track_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp"/>

        <TextView
            android:id="@+id/history_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="19sp"
            android:textColor="@color/settings_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/clear_button"
            android:text="@string/clear_history"
            style="@style/SearchMessageButton"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/results_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="109dp" />

        <ImageView
            android:id="@+id/imageView_result_error"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:srcCompat="@drawable/results_error_icon" />

        <TextView
            style="@style/SearchMessage"
            android:id="@+id/textView"
            android:text="@string/no_results"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="109dp" />

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:srcCompat="@drawable/internet_error_icon" />

        <TextView
            style="@style/SearchMessage"
            android:id="@+id/no_internet_text1"
            android:text="@string/no_connection"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/no_internet_text2"
            android:text="@string/please_check"
            android:paddingHorizontal="16dp"
            style="@style/SearchMessage"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />
        <Button
            android:id="@+id/refresh_button"
            android:text="@string/refresh"
            style="@style/SearchMessageButton"/>

    </LinearLayout>

</LinearLayout>